--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,38 @@
 {
   "short_name": "Paul a Pixel",
   "name": "Paul a Pixel Design Movies",
-  "icons": [
-    {
-      "src": "img/bolinha.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
   "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#F77F00",
   "background_color": "#FFB400"
+  "icons": [
+    {
+      "src": "img/bolinha128.jpg",
+      "sizes": "128x128",
+      "type": "image/jpg"
+    },
+    {
+      "src": "img/bolinha192.jpg",
+      "sizes": "192x192",
+      "type": "image/jpg"
+    },
+    {
+      "src": "img/bolinha256.jpg",
+      "sizes": "256x256",
+      "type": "image/jpg"
+    },
+    {
+      "src": "img/bolinha384.jpg",
+      "sizes": "384x384",
+      "type": "image/jpg"
+    },
+    {
+      "src": "img/bolinha512.jpg",
+      "sizes": "512x512",
+      "type": "image/jpg"
+    }
+
+  ],
+  
 }
