--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#F77F00",
-  "background_color": "#FFB400"
+  "background_color": "#FFB400",
   "icons": [
     {
       "src": "img/bolinha128.jpg",
@@ -32,7 +32,6 @@
       "sizes": "512x512",
       "type": "image/jpg"
     }
-
-  ],
-  
+  ]
+ 
 }
